--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -93,7 +93,7 @@
 
 body {
   margin: 0;
-  font-family: var(--bs-body-font-family);
+  font-family: 'Myriad Pro', sans-serif;
   font-size: var(--bs-body-font-size);
   font-weight: var(--bs-body-font-weight);
   line-height: var(--bs-body-line-height);
@@ -115,7 +115,7 @@ hr {
 h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'Myriad Pro', sans-serif;
   font-weight: 700;
   line-height: 1.2;
 }
@@ -10894,7 +10894,7 @@ html {
 #mainNav {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'Myriad Pro', sans-serif;
   font-weight: 700;
 }
 #mainNav .navbar-brand {
@@ -11064,9 +11064,10 @@ html {
 }
 
 
+
 .bg {
   /* Full height */
-  height: 1500px;
+  height: 1300px;
   width: 100%;
 
   /* Center and scale the image nicely */
@@ -11074,18 +11075,155 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
 }
-@media only screen and (max-width: 1300px) {
+.texto-centrado {
+  position: relative;
+  top: -580px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 100px;
+  color: white;
+  text-align: center;
+  text-shadow: 0 0 10px black;
+}
+
+@media only screen and (max-width: 1700px) {
   .bg {
-    height: 700px;
+    height: 800px;
+  }
+  .texto-centrado {
+    font-size: 80px;
+    top: -350px;
   }
 }
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 800px) {
+  .bg {
+    height: 600px;
+  }
+  .texto-centrado {
+    font-size: 50px;
+    top: -250px;
+  }
+}
+@media only screen and (max-width: 600px) {
   .bg {
     height: 500px;
+  }
+  .texto-centrado {
+    font-size: 40px;
+    top: -200px;
   }
 }
 @media only screen and (max-width: 500px) {
   .bg {
-    height: 300px;
+    height: 450px;
   }
+  .texto-centrado {
+    font-size: 40px;
+    top: -180px;
+  }
+}
+
+
+
+
+
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Make the images invisible by default */
+.Containers {
+  display: none;
+}
+
+/* forward & Back buttons */
+.Back, .forward {
+  cursor: pointer;
+  position: absolute;
+  top: 48%;
+  width: auto;
+  margin-top: -23px;
+  padding: 17px;
+  color: grey;
+  font-weight: bold;
+  font-size: 19px;
+  transition: 0.4s ease;
+  border-radius: 0 5px 5px 0;
+  user-select: none;
+}
+
+/* Place the "forward button" to the right */
+.forward {
+  right: 0;
+  border-radius: 4px 0 0 4px;
+}
+
+/*when the user hovers,add a black background with some little opacity */
+.Back:hover, .forward:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption Info */
+.Info {
+  color: #e3e3e3;
+  font-size: 16px;
+  padding: 10px 14px;
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Worknumbering (1/3 etc) */
+.MessageInfo {
+  color: #f2f2f3;
+  font-size: 14px;
+  padding: 10px 14px;
+  position: absolute;
+  top: 0;
+}
+
+/* The circles or bullets and indicators */
+.dots {
+  cursor: pointer;
+  height: 16px;
+  width: 16px;
+  margin: 0 3px;
+  background-color: #acc;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.5s ease;
+}
+
+.enable, .dots:hover {
+  background-color: #717161;
+}
+
+/* Faint animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.4s;
+  animation-name: fade;
+  animation-duration: 1.4s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .5}
+  to {opacity: 2}
+}
+
+@keyframes fade {
+  from {opacity: .5}
+  to {opacity: 2}
+}
+
+
+
+.img-reducida {
+  max-height: 600px; /* Establece la altura máxima deseada */
 }
