--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11238,3 +11238,11 @@ html {
 .btnCreateReview:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
+
+.btnSend {
+  background-color: #2c3e50;
+}
+
+.btnSend:hover {
+  background-color: #11273e;
+}
