cerrar_menu_al_seleccionar

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11223,7 +11223,7 @@ html {
 }
 
 .conatainerReviews {
-  background-color: #d8d8d8; 
+  background-color: #adadad; 
   border-radius: 30px
 }
 
@@ -11303,7 +11303,7 @@ html {
 }
 
 .comment {
-  color: #555;
+  color: #0d0d0d;
   line-height: 1.6;
 }
 
